--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
+        "php": ">=5.6.0",
         "guzzlehttp/guzzle": "6.2.*",
         "illuminate/filesystem": "5.2.*",
         "illuminate/support": "5.2.*",
