--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "crafter/installer",
-    "description": "An all in one PHP framework installer.",
+    "description": "Install your favourite PHP frameworks using only one installer.",
     "license": "MIT",
     "authors": [
         {
@@ -19,6 +19,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "5.4.*",
+        "mockery/mockery": "0.9.*",
         "symfony/var-dumper": "3.1.*"
     },
     "autoload": {
