--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "guzzlehttp/guzzle": "6.2.*",
         "illuminate/filesystem": "5.2.*",
         "illuminate/support": "5.2.*",
         "symfony/console": "3.1.*",
         "symfony/process": "3.1.*",
-        "symfony/yaml": "3.1.*"
+        "symfony/yaml": "3.1.*",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "phpunit/phpunit": "5.4.*",
