--- a/src/config/frameworks.yml
+++ b/src/config/frameworks.yml
@@ -2,7 +2,9 @@ list:
  - laravel
  - symfony
  - zend
+ - cakephp
 repos:
     laravel: \Crafter\Installer\Repositories\LaravelRepository
     symfony: \Crafter\Installer\Repositories\SymfonyRepository
     zend: \Crafter\Installer\Repositories\ZendRepository
+    cakephp: \Crafter\Installer\Repositories\CakePhpRepository
