--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,15 @@
         "php": ">=5.6.0",
         "illuminate/filesystem": "5.2.*",
         "illuminate/support": "5.2.*",
-        "symfony/console": "3.1.*",
-        "symfony/process": "3.1.*",
-        "symfony/yaml": "3.1.*",
-        "guzzlehttp/guzzle": "^6.2"
+        "symfony/console": "~2.3|~3.1",
+        "symfony/process": "~2.3|~3.1",
+        "symfony/yaml": "~2.3|~3.1",
+        "guzzlehttp/guzzle": "~4.0|~5.0|~6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "5.4.*",
         "mockery/mockery": "0.9.*",
-        "symfony/var-dumper": "3.1.*"
+        "symfony/var-dumper": "~2.3|~3.1"
     },
     "autoload": {
         "psr-4": {
